Finished adding spanish copy Added alt text to images Fixed resume link to translate Fixed footer links not working on spanish site Centered title div Fixed spacing on landing img Added spanish resume (wip)

--- a/assets/css/2-base/_base.sass
+++ b/assets/css/2-base/_base.sass
@@ -81,4 +81,4 @@ body
 
 img
   width: 100%
-  margin: 15px 0
+  margin: 0
