--- a/assets/css/4-sections/_landing.sass
+++ b/assets/css/4-sections/_landing.sass
@@ -1,3 +1,7 @@
+.title-container
+  display: flex
+  justify-content: center
+
 .title
-	margin-top: 28px
-	margin-bottom: 30px
+  margin-top: 18px
+  margin-bottom: 34px
