--- a/assets/css/4-sections/_work.sass
+++ b/assets/css/4-sections/_work.sass
@@ -7,6 +7,7 @@
   -webkit-filter: grayscale(100%)
   filter: grayscale(100%)
   opacity: .4
+  margin: 15px 0
 
   border: 1px solid #000
 
